修改组织基本信息，提交修改信息后端实现
