# team_task_hub/backend/internal/models/organization.go
@@ -38,14 +38,15 @@ func (OrganizationMember) TableName() string {
 type OrganizationApplication struct {
 	ID uint `gorm:"primaryKey;autoIncrement;type:BIGINT UNSIGNED" json:"id"`
 	// 申请类型与状态
-	ApplicationType string `gorm:"type:ENUM('create_org','join_org');not null;index" json:"application_type"`
+	ApplicationType string `gorm:"type:ENUM('create_org','join_org','change_org');not null;index" json:"application_type"`
 	Status          string `gorm:"type:ENUM('pending','approved','rejected');default:'pending';index" json:"status"`
 
 	// 申请人信息
 	ApplicantUserID   uint   `gorm:"not null;type:BIGINT UNSIGNED;index" json:"applicant_user_id"`
 	ApplicantUsername string `gorm:"size:100;not null" json:"applicant_username"`
 
-	OrganizationName string `gorm:"size:100;not null;index" json:"organization_name"`
+	OrganizationID   uint   `gorm:"type:BIGINT UNSIGNED;index" json:"organization_id"`
+	OrganizationName string `gorm:"size:100;index" json:"organization_name"`
 
 	// 申请内容
 	ApplicantIntroduction string `gorm:"type:text" json:"applicant_introduction,omitempty"`
